--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quis_pbs_if21",
+  "name": "bioskop-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,8 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parse": "^0.1.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.1",
-    "mysql": "^2.18.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "pg": "^8.11.5"
   }
 }
