--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "vercel": 2,
+    "version": 2,
     "builds": [
         {
             "src": "index.js",
@@ -9,7 +9,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/index.js"
+            "dest": "/"
         }
     ]
 }
